<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ap="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="x.ale.incubeertor.Incubeertor">

        <EditText android:id="@+id/edit_message"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/edit_message" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_send"
            android:textAllCaps="false"
            android:onClick="sendMessage" />

        <Button android:id="@+id/new_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_profile"
            android:textAllCaps="false"
            android:onClick="newProfile" />

        <Button android:id="@+id/select_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_profile"
            android:textAllCaps="false"
            android:onClick="loadSelectProfile"/>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_profile"
            android:textAllCaps="false"
            android:onClick="deleteProfile"  />

        <com.androidplot.xy.XYPlot
            style="@style/APDefacto.Dark"
            android:id="@+id/steps_plot"
            android:layout_width="match_parent"
            android:layout_height="400px"
            />


        <LinearLayout android:id="@+id/steps_vertical_layout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"  >

            <LinearLayout android:id="@+id/steps_heading_layout"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.3"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/steps_time_heading"  />
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.3"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/steps_temperature_heading"  />
                <Space
                    android:layout_width="0dp"
                    android:layout_weight="0.3"
                    android:layout_height="wrap_content"  />

            </LinearLayout>

            <LinearLayout android:id="@+id/new_step_layout"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText android:id="@+id/new_step_time"
                    android:layout_width="0dp"
                    android:layout_weight="0.3"
                    android:layout_height="wrap_content" />
                <EditText android:id="@+id/new_step_temp"
                    android:layout_width="0dp"
                    android:layout_weight="0.3"
                    android:layout_height="wrap_content" />
                <Button android:id="@+id/add_new_step_button"
                    android:layout_width="0dp"
                    android:layout_weight="0.3"
                    android:layout_height="wrap_content"
                    android:text="@string/add_new_step_button"
                    android:textAllCaps="false"
                    android:onClick="addNewStep"/>

            </LinearLayout>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="save profile"
            android:textAllCaps="false"
            android:onClick="save"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/brew_button"
            android:onClick="brew"/>

    </LinearLayout>
</ScrollView>
